# luminaguard

./: .coverage-baseline.json  .dev-config.toml  .env.example  .gitignore  .jscpd.json  .mcp.json  .pre-commit-config.yaml  AGENT_TASK.md  CI_FAILURE_REMEDIATION_COMPLETE.md  CI_FAILURE_REMEDIATION_PLAN.md  CLAUDE.md  COMPLETION_SUMMARY.md  DEV_MODE_GUIDE.md  DEV_SETUP.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  FIRECRACKER_FEASIBILITY_REPORT.md  GEMINI.md  GITHUB_ACTIONS_SECURITY_FIX.md  HTTP_TRANSPORT_TESTS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INSTALL.md  ISSUES_QUICK_REFERENCE.txt  ISSUE_199_COMPLETION_REPORT.md  ISSUE_93_COMPLETION_REPORT.md  ISSUE_TRACKER_SUMMARY.md  LICENSE  MCP_CLIENT_VALIDATION_SUMMARY.md  MERGE_FINAL_STATUS.md  Makefile  PARALLEL_PR_SUMMARY.md  PARALLEL_WORKSTREAM_STATUS.md  PHASE2_DISPATCH.md  PHASE2_SUMMARY.md  PHASE3_VALIDATION_PROGRAM.md  PLATFORM_SUPPORT_STATUS.md  PR_110_REVIEW.md  PR_112_REVIEW.md  PR_68_REVIEW.md  PR_77_REVIEW.md  (+54 more)
.agents/: SESSION_INDEX.md  (+6 more)
agent/: .bandit  README.md  approval_client.py  bot_factory.py  conftest.py  create_bot.py  daemon_config.py  llm_client.py  logging_config.py  loop.py  mcp_client.py  mesh.py  messenger.example.json  pyproject.toml  vsock_client.py
agent/daemon/: INTEGRATION_README.md  __init__.py  advanced_features.py  browser.py  config.py  daemon_logging.py  desktop.py  developer_mode.py  health.py  integration.py  integration_example.py  lifecycle.py  monitoring.py  persona.py  scheduler.py  state.py  tools.py
agent/examples/: README.md  mcp_filesystem_demo.py
agent/messenger/: __init__.py  discord.py  server.py  signal.py  slack.py  telegram.py  whatsapp.py
agent/skills/: __init__.py  examples.py
agent/tests/: __init__.py  generate_security_report.py  test_247_bot_setup.py  test_advanced_features.py  test_approval_client.py  test_approval_cliff.py  test_approval_tui.py  test_bot_factory.py  test_daemon_config.py  test_daemon_integration.py  test_daemon_logging.py  test_llm_client.py  test_llm_fallback.py  test_llm_integration.py  test_logging_config.py  test_loop.py  test_loop_coverage.py  test_loop_extra.py  test_mcp_client.py  test_mcp_integration.py  test_mesh_protocol.py  test_messenger.py  test_messengers.py  test_properties.py  test_real_mcp_integration.py  test_security_code_execution.py  test_skills.py  test_style.py  test_vsock_client.py
agent/tests/benchmarks/: __init__.py  test_memory_footprint.py  test_startup_performance.py  test_tool_latency.py
agent/tests/performance/: __init__.py  agent_benchmarks.py
orchestrator/: Cargo.toml  config.example.toml  test_firewall_debug  test_firewall_debug.rs
orchestrator/.beads/metrics/: security-validation-report.json  security-validation-summary.txt
orchestrator/.beads/metrics/performance/: rust_baseline_20260215_033805.json
orchestrator/.beads/metrics/reliability/: network_partition_test_results_20260216_164752.json  network_partition_test_results_20260216_191238.json  network_partition_test_results_20260217_001632.json  network_partition_test_results_20260217_020947.json  network_partition_test_results_20260217_021234.json  network_partition_test_results_20260217_021252.json  network_partition_test_results_20260217_024109.json  network_partition_test_results_20260217_033456.json  network_partition_test_results_20260217_050144.json  network_partition_test_results_20260217_121723.json  network_partition_test_results_20260217_122836.json  network_partition_test_results_20260217_151150.json  network_partition_test_results_20260217_151305.json  network_partition_test_results_20260217_152137.json  network_partition_test_results_20260217_152216.json  network_partition_test_results_20260217_195718.json  network_partition_test_results_20260219_001429.json  network_partition_test_results_20260219_001601.json  network_partition_test_results_20260219_001616.json  network_partition_test_results_20260219_130404.json  network_partition_test_results_20260219_233340.json  network_partition_test_results_20260219_233607.json  network_partition_test_results_20260220_013719.json  network_partition_test_results_20260220_013859.json  network_partition_test_results_20260220_013911.json  network_partition_test_results_20260220_014941.json  network_partition_test_results_20260220_014955.json  (+4 more)
orchestrator/benches/: concurrent_agents.rs  mcp_startup.rs  mcp_transport.rs  performance_baseline.rs  snapshot_pool.rs
orchestrator/coverage/: cobertura.xml
orchestrator/examples/: snapshot_pool_demo.rs
orchestrator/resources/: README.md  overlay-init
orchestrator/src/: agent_rpc.rs  config.rs  lib.rs  logging_tests.rs  main.rs  mcp_command.rs  metrics.rs  metrics_server.rs
orchestrator/src/approval/: action.rs  classifier.rs  diff.rs  history.rs  mod.rs  tui.rs  ui.rs
orchestrator/src/mcp/: client.rs  http_transport.rs  integration.rs  mod.rs  proptests.rs  protocol.rs  retry.rs  transport.rs
orchestrator/src/mesh/: config.rs  discovery.rs  error.rs  messaging.rs  mod.rs
orchestrator/src/rate_limit/: config.rs  dashboard.rs  manager.rs  mod.rs  quota.rs  store.rs
orchestrator/src/tools/: executor.rs  mod.rs  timeout.rs  validator.rs
orchestrator/src/vm/: agent_executor.rs  apple_hv.rs  approval_cliff_tests.rs  approval_handler.rs  chaos.rs  config.rs  crash_recovery_tests.rs  daemon_logging.rs  e2e_tests.rs  firecracker.rs  firecracker_types.rs  firewall.rs  firewall_tests.rs  hyperv.rs  hypervisor.rs  integration_tests.rs  jailer.rs  mod.rs  network_partition.rs  network_partition_tests.rs  performance_tests.rs  pool.rs  prototype.rs  reliability.rs  reliability_tests.rs  repro_collision.rs  resource_limits.rs  seccomp.rs  seccomp_tests.rs  security_escape.rs  security_escape_simple.rs  security_integration_tests.rs  security_validation.rs  snapshot.rs  snapshot_error.rs  startup_optimizer.rs  tests.rs  vsock.rs
orchestrator/src/webhooks/: delivery.rs  manager.rs  mod.rs  queue.rs  retry.rs
orchestrator/tests/: cli.rs  mcp_reconnection_tests.rs  repro_collision.rs
orchestrator/tests/performance/: baseline_benchmarks.rs
(+195 files in other folders)
