[project]
name = "luminaguard-agent"
version = "0.1.0"
description = "LuminaGuard Agent - Python Reasoning Loop"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "LuminaGuard Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42.0",
    "croniter>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.1",
    "hypothesis>=6.91",
    "black>=23.12",
    "mypy>=1.8",
    "pylint>=3.0",
    "psutil>=5.9",
    "bandit[toml]>=1.7",
    "safety>=2.3",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0111",
    "C0103",
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.setuptools.packages]
find = {where = ["."], include = ["daemon", "skills", "messenger"]}

[tool.hypothesis]
phases = ["explicit", "generate", "shrink"]
