[package]
name = "ironclaw-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["IronClaw Contributors"]
description = "Local-first Agentic AI Runtime - Rust Orchestrator"
license = "MIT"
repository = "https://github.com/your-username/ironclaw"
readme = "../README.md"

[features]
default = ["vm-prototype"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization (MCP protocol - JSON-RPC 2.0)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for MCP transport - Phase 2)
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
http-body-util = { version = "0.1", features = ["full"] }
bytes = "1.0"

# Random number generation (for retry jitter)
rand = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Agent execution (PR #40, #136)
chrono = { version = "0.4", features = ["serde"] }
