[package]
name = "luminaguard-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["LuminaGuard Contributors"]
description = "Local-first Agentic AI Runtime - Rust LuminaGuard Orchestrator"
license = "MIT"
repository = "https://github.com/your-username/luminaguard"
readme = "../README.md"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization (MCP protocol - JSON-RPC 2.0)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits (for test mocks)
async-trait = "0.1"

# HTTP client (for HTTP transport - Phase 2)
reqwest = { version = "0.12", features = ["json"] }

# Random number generation (for retry jitter)
rand = "0.8"
fastrand = "2.0"

# Firecracker HTTP client
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.21", features = ["v4"] }
ratatui = { version = "0.30.0", features = ["crossterm", "serde", "underline-color"] }
crossterm = "0.29.0"

# macOS-specific Virtualization.framework bindings
# NOTE: Currently using stub implementations that match the API shape.
# To use real Virtualization.framework, uncomment these dependencies:
# [target.'cfg(target_os = "macos")'.dependencies]
# objc2 = "0.5"
# objc2-foundation = "0.2"
# objc2-virtualization = "0.2"

[target.'cfg(windows)'.dependencies]
libwhp = { git = "https://github.com/insula-rs/libwhp", rev = "5a378c4" }

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Testing utilities
criterion = "0.8"

# Temporary file management for tests
tempfile = "3.10"

# Async runtime for tests
futures = "0.3"

# System resource monitoring
sysinfo = "0.30"

[lib]
name = "luminaguard_orchestrator"
path = "src/lib.rs"

[[bin]]
name = "luminaguard"
path = "src/main.rs"

[[bin]]
name = "performance_benchmark"
path = "src/bin/performance_benchmark.rs"

[[bench]]
name = "performance_baseline"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "mcp_startup"
harness = false

[[bench]]
name = "snapshot_pool"
harness = false

[[bench]]
name = "concurrent_agents"
harness = false

[features]
vm-prototype = []
